# synarchy

./: .gitignore  =  CHANGELOG.md  CLAUDE.md  FLUID_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_SUMMARY.md  Makefile  README.md  RIVER_REWORK.md  Setup.hs  VERIFICATION.md  [:wq  cabal.project  debug-console.py  debug-console.sh  dig_issues.md  open_bugs.md  out.tmp  out.tmp.tmp  synarchy.cabal  synarchy_256.pal  tags  vulkaninfo.txt
.github/: copilot-instructions.md
.github/ci/: Dockerfile
.github/workflows/: ci-image.yml  ci.yml  ntfy-notify.yml  review-gate.yml
app/: Main.hs
app/App/: Cli.hs  Dump.hs  Exception.hs  Graphical.hs  Headless.hs  LanguageReport.hs  Offscreen.hs  Preview.hs  ResourceRoot.hs
cbits/: font_stb.c  lua_debug.c
config/: keybinds.yaml  keybinds_defaul.yaml  notifications.yaml  pathing.yaml  video.yaml  video_default.yaml  world_gen_default.yaml
data/: notification_categories.yaml  thoughts.yaml
data/buildings/: acolyte_portal.yaml  cargo_hold_S.yaml  furnace.yaml  high_voltage_battery.yaml  kitchen.yaml  machine_shop.yaml  solar_panel.yaml  workbench.yaml
data/equipment/: humanoid.yaml
data/flora/: boreal_evergreen.yaml  crops.yaml  temperate_deciduous.yaml  temperate_shrubs.yaml  temperate_wildflowers.yaml  tropical.yaml
data/infections/: bacteria.yaml
data/items/: acolyte_habit.yaml  axe_steel.yaml  bronze_bar.yaml  canteen.yaml  coal_chunks.yaml  coffee.yaml  electric_motor.yaml  first_aid_kit.yaml  foraged_food.yaml  gems.yaml  granite_chunk.yaml  high_voltage_battery.yaml  leather_boots.yaml  leather_gloves.yaml  medical_supplies.yaml  ore_chunks.yaml  pick_steel.yaml  processing_unit.yaml  quinoa_sack.yaml  radio.yaml  rations.yaml  shovel_steel.yaml  solar_panel.yaml  steel_bar.yaml  steel_dagger.yaml  steel_hardware.yaml  steel_plate.yaml  technogoggles.yaml  tomato.yaml  water.yaml  wheat_grain.yaml  whetstone.yaml  wiring.yaml  wood_log.yaml  wool_gambeson.yaml
data/language/: concepts.yaml
data/locations/: ruin_small.yaml
data/loot_tables/: ruin_common.yaml
data/materials/: carbonaceous.yaml  glacial.yaml  igneous_extrusive.yaml  igneous_intrusive.yaml  impact.yaml  materials.yaml  metamorphic.yaml  ores.yaml  sedimentary_chemical.yaml  sedimentary_clastic.yaml  soils_mineral.yaml  soils_special.yaml  special.yaml  volcanic.yaml
data/names/: humanoid.yaml
data/recipes/: basic.yaml  basic_food.yaml  fabrication.yaml  machining.yaml  repair.yaml  smelting.yaml
data/structure_packs/: dungeon_1.yaml  wire.yaml
data/substances/: biological.yaml  leathers.yaml  metals.yaml  textiles.yaml
data/units/: acolyte.yaml  bear_brown.yaml  gray_wolf.yaml  red_squirrel.yaml  technomule.yaml
data/vegetation/: farmland.yaml  grasses.yaml  ground_cover.yaml  mosses.yaml  snow.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: asset_generation.md  blood_decals.md  engineenv_capability_inventory.md  expedition_gameplay_loop.md  persistence_contract.md  persistence_state_inventory.md  player_events.md  player_manual.md  texture_infrastructure.md
docs/history/: README.md  claude_md_2026-07-23_pretrim.md  haskell_large_file_submodule_triage_2026-07.md  pipeline_audit_2026-04.md  project_assessment_2026-07.md  worldgen_timeline_profile_2026-07.md
docs/save_compat/: manifest.json
mod/: shell.lua  test.lua
scripts/: acolyte_combat.lua  bear_ai.lua  brain.lua  build_tool.lua  build_tool_remote_warning.lua  building_info_panel.lua  building_loader.lua  building_spawn.lua  cardio.lua  cargo_inventory_panel.lua  chop_tool.lua  circadian.lua  circulation.lua  combat_log.lua  construct_tool.lua  consumable.lua  control_activation_fixture.lua  crafting_panel.lua  create_world_menu.lua  debug.lua  debug_anim_panel.lua  equipment_loader.lua  event_log.lua  exhaustion.lua  flora_catalog.lua  flora_loader.lua  gray_wolf_ai.lua  hud.lua  init.lua  init_context_menu.lua  init_keys.lua  init_loader.lua  init_mouse.lua  injuries.lua  injury_log.lua  injury_log_panel.lua  input_check_fixture.lua  input_followup_fixture.lua  item_contents_panel.lua  item_info_panel.lua  (+99 more)
scripts/create_world/: advanced_tab.lua  bottom_buttons.lua  climate_tab.lua  general_tab.lua  generation.lua  log_panel.lua  settings_tab.lua  timeline_tab.lua
scripts/debug/: layout.lua  mode.lua  modes.lua
scripts/hud/: info_panel.lua
scripts/lib/: data_codec.lua  save_modules.lua  serialize.lua
scripts/settings/: data.lua  graphics_tab.lua  input_tab.lua  notifications_tab.lua  placeholder_tab.lua
scripts/ui/: asset_browser.lua  bar.lua  box_textures.lua  broken_overlay.lua  button.lua  checkbox.lua  context_menu.lua  dropdown.lua  focus_indicator.lua  label.lua  list.lua  panel.lua  quality_tier.lua  randbox.lua  registry.lua  repair_status.lua  reserved_regions.lua  responsive.lua  scale.lua  scrollbar.lua  slider.lua  sprite.lua  tabbar.lua  textbox.lua  toggle.lua  utf8_safe.lua  view_teardown.lua
src/: Math.hs  UI.hs  UPrelude.hs
src/Blood/: Impact.hs  Render.hs  Texture.hs  Trail.hs  Types.hs
test/: Spec.hs
test-headless/: Spec.hs
tools/: README.md  action_outcome_coverage.py  action_outcome_layer_a_check.py  action_outcome_probe.py  bed_report.py  bleeding_trail_probe.py  blood_decal_probe.py  blood_gpu_lifecycle_probe.py  blood_impact_probe.py  cargo_capacity_probe.py  check_texture_paths.py  chop_probe.py  ci-local.sh  ci_expensive_gates.py  ci_probes.py  circadian_probe.py  circadian_species_probe.py  coast_report.py  collapse_crawl_probe.py  combat_anim_probe.py  concussion_revive_probe.py  config_migration_probe.py  config_state_probe.py  construction_blueprint_footprint_probe.py  construction_probe.py  consumable_effects_probe.py  content_registry_probe.py  cooking_probe.py  craft_bill_probe.py  craft_probe.py  crop_probe.py  disarm_probe.py  engine_env_capability_audit.py  farm_ai_probe.py  flora_growth_probe.py  follow_command_priority_probe.py  foraging_probe.py  haskell_module_budget.py  infection_probe.py  injury_log_probe.py  (+95 more)
(+884 files in other folders)
