cabal-version:      3.16
-- The name of the package.
name: synarchy
-- The package version.
version: 0.1.0.0
-- URL for the project homepage or repository.
homepage: https://github.com/coghex/synarchy
-- The license under which the package is released.
license: MIT
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: coghex
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: vincecoghlan@gmail.com
category: Game
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md
data-files: dat/*
-- defaults to no debug
flag dev
    default: False

flag profile
    default: False

test-suite synarchy-test-graphical
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Test.UPrelude
                   Test.Engine.Core.Queue
                   Test.Engine.Core.Var
                   Test.Engine.Input.Thread
                   Test.Engine.Graphics.Window.GLFW
                   Test.Engine.Graphics.Vulkan.Instance
                   Test.Engine.Graphics.Vulkan.Surface
                   Test.Engine.Graphics.Vulkan.Helpers
                   Test.Engine.Graphics.Vulkan.Device
    default-extensions: DefaultSignatures
                     , DuplicateRecordFields
                     , MagicHash
                     , NoMonomorphismRestriction
                     , NoImplicitPrelude
                     , NumDecimals
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilyDependencies
                     , UnicodeSyntax
                     , ViewPatterns
                     , QuasiQuotes
    build-depends: base
                , base-unicode-symbols
                , async
                , bytestring
                , containers
                , directory
                , filepath
                , hspec
                , hslua
                , JuicyPixels
                , synarchy
                , text
                , monad-logger
                , stm
                , mtl
                , vector
                , vector-algorithms
                , vector-th-unbox
                , cereal
                , yaml
                , aeson
                , random
                , deepseq
                , parallel
                , unordered-containers
                , GLFW-b
                , vulkan
                , vulkan-utils
    default-language: GHC2024
    -- Warnings apply to BOTH profiles (#435): prod is the default for all
    -- routine work, so it must carry the full warning set. Keep this the
    -- single source of truth — don't re-add warning flags inside the
    -- dev/prod conditionals below.
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wincomplete-patterns
                 -Wno-ambiguous-fields
                 -- name-shadowing: ~70 pre-existing shadows; bulk renames
                 -- risk the wrong-variable bugs the warning guards against.
                 -- Revisit incrementally, not as a sweep (#435).
                 -Wno-name-shadowing
                 -- type-defaults: all literal defaulting in log/format
                 -- code; annotating adds noise without catching bugs.
                 -Wno-type-defaults
    if flag(dev)
      if os(darwin)
          cpp-options: -DDARWIN -DDEVELOPMENT
          ghc-options: -optP-Wno-nonportable-include-path
                       -O1
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -haddock
                       -fno-full-laziness
                       -fno-cse
                       -fsanitize=address
                       -fPIC
                       -optl-Wl,-dead_strip
                       -optl-Wl,-bind_at_load
      else
          cpp-options: -DDEVELOPMENT
          ghc-options: -O1
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -haddock
    else
      if os(darwin)
          cpp-options: -DDARWIN
          ghc-options: -optP-Wno-nonportable-include-path
                       -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing
      else
          ghc-options: -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing
    if flag(profile)
          ghc-options: -fprof-late

test-suite synarchy-test-headless
    type: exitcode-stdio-1.0
    hs-source-dirs: test-headless
    main-is: Spec.hs
    other-modules: Test.Headless.Harness
                   Test.Headless.WorldGen
                   Test.Headless.WorldGen.Geology
                   Test.Headless.WorldGen.Parity
                   Test.Headless.WorldGen.Flatness
                   Test.Headless.WorldGen.SoilGate
                   Test.Headless.WorldGen.SoilShed
                   Test.Headless.WorldGen.Exposure
                   Test.Headless.WorldGen.ZoomParity
                   Test.Headless.WorldGen.BorderProbe
                   Test.Headless.WorldGen.WrapSeam
                   Test.Headless.Unit.Pathing.Cost
                   Test.Headless.Unit.Pathing.AStar
                   Test.Headless.Unit.Pathing.Config
                   Test.Headless.Unit.Render.PickFrame
                   Test.Headless.Unit.Anim
                   Test.Headless.Unit.Injury
                   Test.Headless.Unit.Fall
                   Test.Headless.Unit.Stats
                   Test.Headless.Item.Temperature
                   Test.Headless.World.Save.Sanitize
                   Test.Headless.World.CursorInfo
                   Test.Headless.World.SelectTileZ
                   Test.Headless.World.Spoil
                   Test.Headless.Combat.Damage
                   Test.Headless.Combat.Severing
                   Test.Headless.Combat.Wounds
                   Test.Headless.Magma.Shape
                   Test.Headless.Sim.Seam
                   Test.Headless.Input.KeyNames
                   Test.Headless.Input.Bindings
                   Test.Headless.Graphics.VideoConfig
                   Test.Headless.Construct.Corners
                   Test.Headless.Craft.Execute
                   Test.Headless.UI.Tooltip
                   Test.Headless.World.Calendar
                   Test.Headless.River.Graph
                   Test.Headless.World.Render.SideFace
                   Test.Headless.World.Render.SlopeBit
                   Test.Headless.Render.ViewportGuard
                   Test.Headless.Camera.GotoClamp
                   Test.Headless.Scene.BatchMerge
                   Test.Headless.Render.PanMargin
    default-extensions: DefaultSignatures
                     , DuplicateRecordFields
                     , MagicHash
                     , NoMonomorphismRestriction
                     , NoImplicitPrelude
                     , NumDecimals
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuantifiedConstraints
                     , RecordWildCards
                     , TypeFamilyDependencies
                     , UnicodeSyntax
                     , ViewPatterns
                     , QuasiQuotes
    build-depends: base
                , base-unicode-symbols
                , containers
                , GLFW-b
                , hspec
                , synarchy
                , text
                , stm
                , vector
                , unordered-containers
                , deepseq
                , random
                , linear
                , bytestring
                , cereal
                , yaml
    default-language: GHC2024
    -- Warnings apply to BOTH profiles (#435): prod is the default for all
    -- routine work, so it must carry the full warning set. Keep this the
    -- single source of truth — don't re-add warning flags inside the
    -- dev/prod conditionals below.
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wincomplete-patterns
                 -Wno-ambiguous-fields
                 -- name-shadowing: ~70 pre-existing shadows; bulk renames
                 -- risk the wrong-variable bugs the warning guards against.
                 -- Revisit incrementally, not as a sweep (#435).
                 -Wno-name-shadowing
                 -- type-defaults: all literal defaulting in log/format
                 -- code; annotating adds noise without catching bugs.
                 -Wno-type-defaults
    if flag(dev)
      if os(darwin)
          cpp-options: -DDARWIN -DDEVELOPMENT
          ghc-options: -optP-Wno-nonportable-include-path
                       -O1
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -fno-full-laziness
                       -fno-cse
                       -fPIC
                       -optl-Wl,-dead_strip
                       -optl-Wl,-bind_at_load
      else
          cpp-options: -DDEVELOPMENT
          ghc-options: -O1
                       -threaded
                       "-with-rtsopts=-N -A128M"
    else
      if os(darwin)
          cpp-options: -DDARWIN
          ghc-options: -optP-Wno-nonportable-include-path
                       -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing
      else
          ghc-options: -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing
    if flag(profile)
          ghc-options: -fprof-late


library
    -- Expose the modules you want to test
    exposed-modules: UPrelude
                     Math
                     Engine.Asset.Base
                     Engine.Asset.Types
                     Engine.Asset.Handle
                     Engine.Asset.Manager
                     Engine.Asset.YamlTextures
                     Engine.Asset.YamlFlora
                     Engine.Asset.YamlUnits
                     Engine.Asset.YamlNames
                     Engine.Asset.YamlNotifications
                     Engine.PlayerEvent
                     Engine.PlayerEvent.Emit
                     Engine.Graphics.Base
                     Engine.Graphics.Camera
                     Engine.Graphics.Viewport
                     Engine.Graphics.Types
                     Engine.Graphics.Config
                     Engine.Graphics.Vulkan.Base
                     Engine.Graphics.Vulkan.Buffer
                     Engine.Graphics.Vulkan.BufferUtils
                     Engine.Graphics.Vulkan.Capability
                     Engine.Graphics.Vulkan.Command
                     Engine.Graphics.Vulkan.Command.Record
                     Engine.Graphics.Vulkan.Command.Sprite
                     Engine.Graphics.Vulkan.Command.Text
                     Engine.Graphics.Vulkan.Descriptor
                     Engine.Graphics.Vulkan.Device
                     Engine.Graphics.Vulkan.Framebuffer
                     Engine.Graphics.Vulkan.Image
                     Engine.Graphics.Vulkan.Init
                     Engine.Graphics.Vulkan.Instance
                     Engine.Graphics.Vulkan.MSAA
                     Engine.Graphics.Vulkan.Pipeline
                     Engine.Graphics.Vulkan.Pipeline.Bindless
                     Engine.Graphics.Vulkan.Recreate
                     Engine.Graphics.Vulkan.Sampler.Types
                     Engine.Graphics.Vulkan.Sampler.Cache
                     Engine.Graphics.Vulkan.ShaderCode
                     Engine.Graphics.Vulkan.Swapchain
                     Engine.Graphics.Vulkan.Sync
                     Engine.Graphics.Vulkan.Types
                     Engine.Graphics.Vulkan.Types.Cleanup
                     Engine.Graphics.Vulkan.Types.Descriptor
                     Engine.Graphics.Vulkan.Types.Texture
                     Engine.Graphics.Vulkan.Types.Vertex
                     Engine.Graphics.Vulkan.Texture
                     Engine.Graphics.Vulkan.Texture.Undefined
                     Engine.Graphics.Vulkan.Texture.DefaultFaceMap
                     Engine.Graphics.Vulkan.Texture.Types
                     Engine.Graphics.Vulkan.Texture.Slot
                     Engine.Graphics.Vulkan.Texture.System
                     Engine.Graphics.Vulkan.Texture.Handle
                     Engine.Graphics.Vulkan.Texture.Bindless
                     Engine.Graphics.Vulkan.Vertex
                     Engine.Graphics.Window.GLFW
                     Engine.Graphics.Window.Types
                     Engine.Graphics.Font.Data
                     Engine.Graphics.Font.Draw
                     Engine.Graphics.Font.Load
                     Engine.Graphics.Font.Util
                     Engine.Graphics.Font.STB
                     Engine.Graphics.Transform
                     Engine.Input.Bindings
                     Engine.Input.Callback
                     Engine.Input.Types
                     Engine.Input.Thread
                     Engine.Scripting.Types
                     Engine.Scripting.Lua.Debug
                     Engine.Scripting.Lua.DebugServer
                     Engine.Scripting.Lua.Types
                     Engine.Scripting.Lua.Material
                     Engine.Scripting.Lua.Message
                     Engine.Scripting.Lua.Thread
                     Engine.Scripting.Lua.Script
                     Engine.Scripting.Lua.Util
                     Engine.Scripting.Lua.API
                     Engine.Scripting.Lua.API.Core
                     Engine.Scripting.Lua.API.Camera
                     Engine.Scripting.Lua.API.Debug
                     Engine.Scripting.Lua.API.Log
                     Engine.Scripting.Lua.API.Config
                     Engine.Scripting.Lua.API.Save
                     Engine.Scripting.Lua.API.PlayerEvent
                     Engine.Scripting.Lua.API.Graphics
                     Engine.Scripting.Lua.API.Input
                     Engine.Scripting.Lua.API.Keybinds
                     Engine.Scripting.Lua.API.Text
                     Engine.Scripting.Lua.API.Focus
                     Engine.Scripting.Lua.API.Shell
                     Engine.Scripting.Lua.API.UI
                     Engine.Scripting.Lua.API.UI.Page
                     Engine.Scripting.Lua.API.UI.Element
                     Engine.Scripting.Lua.API.UI.Hierarchy
                     Engine.Scripting.Lua.API.UI.Focus
                     Engine.Scripting.Lua.API.UI.TextInput
                     Engine.Scripting.Lua.API.UI.Property
                     Engine.Scripting.Lua.API.UI.Tooltip
                     Engine.Scripting.Lua.API.Units
                     Engine.Scripting.Lua.API.World
                     Engine.Scripting.Lua.API.WorldQuery
                     Engine.Scripting.Lua.API.Forage
                     Engine.Scripting.Lua.API.Flora
                     Engine.Scripting.Lua.API.YamlTextures
                     Engine.Core.Defaults
                     Engine.Core.Init
                     Engine.Core.Monad
                     Engine.Core.State
                     Engine.Core.Types
                     Engine.Core.Log
                     Engine.Core.Log.Monad
                     Engine.Core.Thread
                     Engine.Core.Error.Exception
                     Engine.Core.Resource
                     Engine.Core.Queue
                     Engine.Core.Var
                     Engine.Scene.Base
                     Engine.Scene.Batch
                     Engine.Scene.Batch.Sprite
                     Engine.Scene.Batch.Text
                     Engine.Scene.Batch.Update
                     Engine.Scene.Batch.Vertex
                     Engine.Scene.Batch.Visibility
                     Engine.Scene.Types
                     Engine.Scene.Types.Batch
                     Engine.Scene.Types.Graph
                     Engine.Scene.Types.Manager
                     Engine.Scene.Types.Node
                     Engine.Scene.Graph
                     Engine.Scene.Manager
                     Engine.Scene.Render
                     Engine.Loop
                     Engine.Loop.Timing
                     Engine.Loop.Frame
                     Engine.Loop.Camera
                     Engine.Loop.Resource
                     Engine.Loop.Headless
                     Engine.Loop.Shutdown
                     UI
                     UI.Types
                     UI.Focus
                     UI.Manager
                     UI.Render
                     UI.TextBuffer
                     UI.Tooltip
                     Unit.Types
                     Unit.Anim
                     Unit.Stats
                     Unit.Render
                     Unit.Sprite
                     Unit.Selection
                     Unit.HitTest
                     Unit.LineOfSight
                     Unit.Pathing.Config
                     Unit.Pathing.Cost
                     Unit.Pathing.AStar
                     Unit.Fall
                     Unit.Injury
                     Unit.Command.Types
                     Unit.Direction
                     Unit.Sim.Types
                     Unit.Thread
                     Unit.Thread.Command
                     Unit.Thread.Movement
                     Building.Types
                     Building.Command.Types
                     Building.Thread.Command
                     Building.Render
                     Building.Placement
                     Building.HitTest
                     Structure.Types
                     Structure.Render
                     Engine.Asset.YamlBuildings
                     Engine.Scripting.Lua.API.Buildings
                     Engine.Scripting.Lua.API.Structure
                     Engine.Scripting.Lua.API.Construct
                     Engine.Scripting.Lua.API.Chop
                     Engine.Scripting.Lua.API.Yaml
                     Structure.Palette
                     Engine.Scripting.Lua.API.Combat
                     Item.Types
                     Item.Roll
                     Item.Temperature
                     Engine.Asset.YamlItems
                     Engine.Scripting.Lua.API.Items
                     Equipment.Types
                     Engine.Asset.YamlEquipment
                     Engine.Scripting.Lua.API.Equipment
                     Substance.Types
                     Engine.Asset.YamlSubstance
                     Engine.Scripting.Lua.API.Substance
                     Infection.Types
                     Engine.Asset.YamlInfection
                     Engine.Scripting.Lua.API.Infection
                     Craft.Types
                     Craft.Execute
                     Engine.Asset.YamlRecipes
                     Engine.Scripting.Lua.API.Craft
                     Location.Types
                     Location.Overlay.Types
                     Location.Overlay
                     Engine.Asset.YamlLocations
                     Engine.Scripting.Lua.API.Locations
                     LootTable.Types
                     LootTable.Roll
                     Engine.Asset.YamlLootTables
                     Engine.Scripting.Lua.API.LootTables
                     Sim.Thread
                     Sim.Command.Types
                     Combat.Types
                     Combat.Thread
                     Combat.Resolution
                     Combat.Wounds
                     Sim.State.Types
                     Sim.Fluid.Types
                     Sim.Fluid.Active
                     World.Base
                     World.Constants
                     World.Command.Types
                     World.Chunk.Types
                     World.Cursor.Types
                     World.Edit.Types
                     World.Edit.Apply
                     World.Types
                     World.Thread
                     World.Thread.Helpers
                     World.Thread.Cursor
                     World.Thread.Time
                     World.Thread.ItemTemp
                     World.Thread.ChunkLoading
                     World.Thread.Command
                     World.Thread.Command.Basic
                     World.Thread.Command.Init
                     World.Thread.Command.Save
                     World.Thread.Command.Time
                     World.Thread.Command.Cursor
                     World.Thread.Command.Texture
                     World.Thread.Command.UI
                     World.Thread.Command.Edit
                     World.Thread.Command.Location
                     World.Grid
                     World.Render
                     World.Render.Camera
                     World.Render.Camera.Types
                     World.Render.ViewBounds
                     World.Render.ChunkCulling
                     World.Render.HitTest
                     World.Render.Quads
                     World.Render.TileQuads
                     World.Render.FloraQuads
                     World.Render.GroundItemQuads
                     World.Render.SideDecoQuads
                     World.Render.Textures
                     World.Render.Textures.Types
                     World.Render.Zoom.Types
                     World.Render.Zoom.Bake
                     World.Render.Zoom.ViewBounds
                     World.Render.Zoom.Climate
                     World.Render.Zoom.Textures
                     World.Render.Zoom.Quads
                     World.Render.Zoom.Cursor
                     World.Render.Zoom.Background
                     World.Generate
                     World.Generate.Arena
                     World.Generate.Constants
                     World.Generate.Coordinates
                     World.Generate.Chunk
                     World.Generate.InitTerrain
                     World.Generate.Timeline
                     World.Generate.Timeline.Fast
                     World.Generate.Strata
                     World.Generate.Types
                     World.Generate.Config
                     World.Geology
                     World.Geology.Types
                     World.Geology.Ore
                     World.Geology.Ore.Types
                     World.Mine.Types
                     World.Construct.Types
                     World.Construct.Apply
                     World.Chop.Types
                     World.Render.SpoilQuads
                     World.Gem
                     World.Spoil.Logic
                     World.Spoil.Types
                     World.Mine.Apply
                     Item.Ground
                     World.Geology.Log
                     World.Geology.Hash
                     World.Geology.Crater
                     World.Geology.Volcano
                     World.Geology.Generate
                     World.Geology.Evolution
                     World.Geology.Timeline
                     World.Geology.Timeline.Types
                     World.Geology.Timeline.Helpers
                     World.Geology.Timeline.Volcanism
                     World.Geology.Timeline.River
                     World.Geology.Timeline.RiverTrace
                     World.Geology.Coastal
                     World.Geology.Coastal.Types
                     World.Fluid.Seabed
                     World.Fluid.Seabed.Types
                     World.Fluid.OceanMask
                     World.Geology.Erosion
                     World.Geology.Event
                     World.Hydrology.Types
                     World.Hydrology.Event
                     World.Hydrology.Simulation
                     World.Hydrology.WaterTable
                     World.Hydrology.River
                     World.Hydrology.River.Meander
                     World.Hydrology.River.Tributary
                     World.Hydrology.River.Carving
                     World.Hydrology.River.Common
                     World.River.Graph
                     World.Hydrology.Glacier
                     World.Hydrology.Glacier.Common
                     World.Hydrology.Glacier.Generation
                     World.Hydrology.Glacier.Carving
                     World.Hydrology.Glacier.Evolution
                     World.Hydrology.Glacier.Spawn
                     World.Ocean.Types
                     World.Page.Types
                     World.Plate
                     World.Plate.Types
                     World.Region.Types
                     World.State.Types
                     World.Save.Types
                     World.Save.Serialize
                     World.Scale
                     World.Slope
                     World.SideFace.Base
                     World.SideFace.Types
                     World.SideFace.Compute
                     World.Texture.Types
                     World.Tool.Types
                     World.Tile.Types
                     World.Time.Types
                     World.Flora.Types
                     World.Flora.Placement
                     World.Flora.Render
                     World.Flora.Harvest
                     World.Fluids
                     World.Fluid.Types
                     World.Fluid.Internal
                     World.Fluid.Ocean
                     World.Fluid.River
                     World.Fluid.Ice
                     World.Fluid.IceLevel
                     World.Fluid.Lake.Types
                     World.Fluid.Lake.Identify
                     World.Fluid.River.Types
                     World.Fluid.River.Identify
                     World.Fluid.Lava
                     World.Magma.Overlay
                     World.Magma.Types
                     World.Magma.Field
                     World.Magma.Shape
                     World.Magma.Kit
                     World.Magma.Lookup
                     World.Magma.Pool
                     World.Magma.Init
                     World.Vegetation
                     World.Weather
                     World.Weather.Types
                     World.Weather.Log
                     World.Weather.Generate
                     World.Weather.Lookup
                     World.Weather.Ambient
                     World.Material
                     World.Material.Id
                     World.Preview
                     World.ZoomMap
                     World.ZoomMap.Cache
                     World.ZoomMap.ChunkTexture
                     World.ZoomMap.ColorPalette
    -- Use the same extensions as your executable
    default-extensions: DefaultSignatures
                      , DuplicateRecordFields
                      , FlexibleInstances
                      , MagicHash
                      , NoMonomorphismRestriction
                      , NoImplicitPrelude
                      , NumDecimals
                      , OverloadedStrings
                      , PatternSynonyms
                      , QuantifiedConstraints
                      , RecordWildCards
                      , TypeFamilyDependencies
                      , UnicodeSyntax
                      , ViewPatterns
                      , QuasiQuotes
    other-extensions: Strict
                    , StrictData
                    , TemplateHaskell
    -- Same dependencies as your executable
    build-depends: base
                 , base-unicode-symbols
                 , bytestring
                 , containers
                 , exceptions
                 , filepath
                 , directory
                 , hashable
                 , GLFW-b
                 , hslua
                 , JuicyPixels
                 , linear
                 , monad-logger
                 , mtl
                 , network
                 , stm
                 , text
                 , time
                 , array
                 , vector
                 , vector-algorithms
                 , vector-th-unbox
                 , cereal
                 , yaml
                 , aeson
                 , random
                 , deepseq
                 , parallel
                 , unordered-containers
                 , vulkan
                 , vulkan-utils
                 , template-haskell
                 , unliftio
                 , unliftio-core
                 , utf8-string
                 , unix
    pkgconfig-depends: vulkan
    hs-source-dirs: src
    c-sources:
        cbits/font_stb.c
        cbits/lua_debug.c
    include-dirs:
        cbits
    cc-options: -O2
    default-language: GHC2024
    -- Warnings apply to BOTH profiles (#435): prod is the default for all
    -- routine work, so it must carry the full warning set. Keep this the
    -- single source of truth — don't re-add warning flags inside the
    -- dev/prod conditionals below.
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wincomplete-patterns
                 -Wno-ambiguous-fields
                 -- name-shadowing: ~70 pre-existing shadows; bulk renames
                 -- risk the wrong-variable bugs the warning guards against.
                 -- Revisit incrementally, not as a sweep (#435).
                 -Wno-name-shadowing
                 -- type-defaults: all literal defaulting in log/format
                 -- code; annotating adds noise without catching bugs.
                 -Wno-type-defaults
    if flag(dev)
      if os(darwin)
          cpp-options: -DDARWIN -DDEVELOPMENT
          ghc-options: -optP-Wno-nonportable-include-path
                       -O1
                       -threaded
                       -haddock
                       -fno-full-laziness
                       -fno-cse
                       -fPIC
                       -optl-Wl,-dead_strip
                       -optl-Wl,-bind_at_load
      else
          cpp-options: -DDEVELOPMENT
          ghc-options: -O1
                       -threaded
                       -haddock
    else
      if os(darwin)
          cpp-options: -DDARWIN
          ghc-options: -optP-Wno-nonportable-include-path
                       -O2
                       -optc-O3
                       -Wno-ambiguous-fields
                       -fexcess-precision
                       -threaded
                       -feager-blackholing
      else
          ghc-options: -O2
                       -optc-O3
                       -Wno-ambiguous-fields
                       -fexcess-precision
                       -threaded
                       -feager-blackholing
    if flag(profile)
          ghc-options: -fprof-late


executable synarchy
    -- .hs or .lhs file containing the Main module.
    main-is: Main.hs
    -- LANGUAGE extensions used by modules in this package.
    default-extensions: DefaultSignatures
                      , DuplicateRecordFields
                      , MagicHash
                      , NoMonomorphismRestriction
                      , NoImplicitPrelude
                      , NumDecimals
                      , OverloadedStrings
                      , FlexibleInstances
                      , PatternSynonyms
                      , QuantifiedConstraints
                      , RecordWildCards
                      , TypeFamilyDependencies
                      , UnicodeSyntax
                      , ViewPatterns
                      , QuasiQuotes
    other-extensions: Strict
                    , StrictData
                    , TemplateHaskell
    -- Other library packages from which modules are imported.
    build-depends: base
                 , base-unicode-symbols
                 , bytestring
                 , containers
                 , filepath
                 , directory
                 , GLFW-b
                 , hslua
                 , JuicyPixels
                 , linear
                 , monad-logger
                 , mtl
                 , network
                 , stm
                 , synarchy
                 , text
                 , time
                 , vector
                 , vector-algorithms
                 , vector-th-unbox
                 , cereal
                 , yaml
                 , aeson
                 , random
                 , deepseq
                 , parallel
                 , unordered-containers
                 , vulkan
                 , vulkan-utils
                 , template-haskell
                 , unliftio
                 , unliftio-core
                 , utf8-string
    -- Directories containing source files.
    hs-source-dirs: app
    -- Base language which the package is written in.
    default-language: GHC2024
    -- Warnings apply to BOTH profiles (#435): prod is the default for all
    -- routine work, so it must carry the full warning set. Keep this the
    -- single source of truth — don't re-add warning flags inside the
    -- dev/prod conditionals below.
    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wincomplete-patterns
                 -Wno-ambiguous-fields
                 -- name-shadowing: ~70 pre-existing shadows; bulk renames
                 -- risk the wrong-variable bugs the warning guards against.
                 -- Revisit incrementally, not as a sweep (#435).
                 -Wno-name-shadowing
                 -- type-defaults: all literal defaulting in log/format
                 -- code; annotating adds noise without catching bugs.
                 -Wno-type-defaults
    if flag(dev)
      if os(darwin)
          cpp-options: -DDARWIN -DDEVELOPMENT
          ghc-options: -optP-Wno-nonportable-include-path
                       -O1
                       -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wincomplete-patterns
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -A128M"
                       -haddock
      else
          cpp-options: -DDEVELOPMENT
          ghc-options: -O1
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -A128M"
                       -haddock
    else
      if os(darwin)
          cpp-options: -DDARWIN
          ghc-options: -optP-Wno-nonportable-include-path
                       -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing
      else
          ghc-options: -O2
                       -optc-O3
                       -fexcess-precision
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -A128M"
                       -feager-blackholing

    if flag(profile)
          ghc-options: -fprof-late
